# api/docs/swagger.json
@@ -444,9 +444,9 @@
                 }
             }
         },
-        "/revoke/{user_id}": {
-            "post": {
-                "description": "Cancels a given access or refresh token",
+        "/api/v1/users/type/": {
+            "put": {
+                "description": "Change user's type to admin, user, artisan or other",
                 "consumes": [
                     "application/json"
                 ],
@@ -454,18 +454,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Tokens"
+                    "User Management"
                 ],
-                "summary": "Cancel a token",
+                "summary": "Change user type",
                 "parameters": [
                     {
-                        "description": "Cancel Token Request",
-                        "name": "cancelToken",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/authentication_service.CancelTokenRequest"
-                        }
+                        "type": "string",
+                        "description": "user id",
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "user type",
+                        "name": "user_type",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -478,15 +483,6 @@
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -508,14 +504,6 @@
         }
     },
     "definitions": {
-        "authentication_service.CancelTokenRequest": {
-            "type": "object",
-            "properties": {
-                "access_token": {
-                    "type": "string"
-                }
-            }
-        },
         "authentication_service.LoginRequest": {
             "type": "object",
             "properties": {
